--- a/编程题.md
+++ b/编程题.md
@@ -1,4 +1,41 @@
 # 编程题
+几个重点：
+1. 已知项目test的com.test.servlet包中有一个Servlet：TestServlet，该Servlet的请求地址为：`http://localhost:8080/test/test/TestServlet,请写出web.xml` 的配置代码
+```xml
+    <servlet>
+        <servlet-name>TestServlet</servlet-Name>
+        <servlet-class>com.test.servlet.TestServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>TestServlet</servlet-name>
+        <url-pattern>/test/TestServlet</url-pattern>
+    </servlet-mapping>
+```
+2. 写一个java类，实现向数据库jdbcStudy的user表插入一条数据
+```java
+public class jdbcDemo{
+    public static void main(String []args){
+        String url="jdbc:mysql://localhost:3306/jdbcStudy";
+        String username="root";
+        String password="qw123456";
+
+        Class.forName("com.mysql.jdbc.driver");
+        Connection con=DriverManager.getConnection(url,username,password);
+        String sql="insert into users(id,username,passwrd) values(?,?,?)";
+
+        PreparedStatement pstmt=con.prepareStatement(sql)
+        pstmt.setInt(1,3);
+        pstmt.setString(2,"mike");
+        pstmt.setString(3,"qwer");
+        pstmt.executeUpdate();
+
+        pstmt.close();
+        con.close();
+    
+    }
+}
+```
+其他：
 1. 创建一个Filter
 ```java
 public class myFilter implements Filter{
